# xArm6-Workspace

./: .gitignore  Dockerfile  README.md  build.sh  simple_xarm_movements.py  start.sh  start_real.sh  xarm_torque_movements.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
python_sdk/: simple_xarm_movements.py  xarm_torque_movements.py
ros2/: docker-compose.yml  start_real.sh
ros2/src/xarm_ros2/xarm_pick_place/: package.xml
ros2/src/xarm_ros2/xarm_pick_place/xarm_pick_place/: pick_place_node.py
src/xarm_ros2/xarm_pick_place/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/xarm_ros2/xarm_pick_place/xarm_pick_place/: pick_place_node.py
